--- a/yes-no-user/src/userReview.css
+++ b/yes-no-user/src/userReview.css
@@ -20,5 +20,19 @@
 
 span {
   font-size: 50px;
-  margin: auto;
+  margin: auto 12px;
+  font-size: 3em;
+}
+
+.big {
+  opacity: 0.7;
+  font-size: 4em;
+  transition: font-size .4s ease-in-out; 
+}
+
+.small {
+  opacity: 1;
+  transform: scale(0.7);
+  font-size: 3em;
+  transition: font .2s ease-out;
 }
