--- a/yes-no-user/src/userReview.css
+++ b/yes-no-user/src/userReview.css
@@ -1,4 +1,4 @@
-.review-container {
+.review-container, .confirm-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -11,7 +11,7 @@
   margin: 10vh auto;
 }
 
-.review {
+.review, .confirm {
   padding: 10vh 10vh;
   font-family: sans-serif;
   font-weight: bold;
@@ -26,7 +26,8 @@ span {
 .big {
   opacity: 0.7;
   font-size: 4em;
-  transition: font-size .4s ease-in-out; 
+  transition: font-size .4s ease-in-out;
+  cursor: pointer;
 }
 
 .small {
@@ -34,4 +35,5 @@ span {
   transform: scale(0.7);
   font-size: 3em;
   transition: font .2s ease-out;
+  cursor: pointer;
 }
