--- a/yes-no-user/src/userReview.css
+++ b/yes-no-user/src/userReview.css
@@ -1,4 +1,5 @@
-.review-container, .confirm-container {
+.review-container,
+.confirm-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -11,7 +12,8 @@
   margin: 10vh auto;
 }
 
-.review, .confirm {
+.review,
+.confirm {
   padding: 10vh 10vh;
   font-family: sans-serif;
   font-weight: bold;
@@ -26,7 +28,7 @@ span {
 .big {
   opacity: 0.7;
   font-size: 4em;
-  transition: font-size .4s ease-in-out;
+  transition: font-size 0.4s ease-in-out;
   cursor: pointer;
 }
 
@@ -34,6 +36,5 @@ span {
   opacity: 1;
   transform: scale(0.7);
   font-size: 3em;
-  transition: font .2s ease-out;
-  cursor: pointer;
+  transition: font 0.2s ease-out;
 }
